NavBar alignment issues

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -18,3 +18,7 @@
 .P0 {
   padding: 0;
 }
+
+.NavBarItemCenterAlign {
+  align-items: center;
+}
